# Text_class_organizer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: index.html
docs/source/: conf.py  quickstart.rst
experiments/: bert_cluster_str.ipynb  requirements.txt  test_lib.ipynb  text_class_organizer.py
experiments/datasets/: different_error_syntax.csv  semantic_errors.csv
src/text_class_organizer/: __init__.py
src/text_class_organizer/error_clusterer/: error_clusterer_base.py  error_clusterer_implementations.py
text_class_organizer_lib/error_clusterer/: error_clusterer.py
