[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text_class_organizer"
version = "0.1.0"
authors = [{name = "Clara Janet Rivera Medina", email = "clarajanet16180@outlook.com"}]
description = "A package to organize text files into different categories based on their content."
requires-python = ">=3.8"

dependencies = [
    "nltk",
    "torch",
    "transformers",
    "pandas",
    "hdbscan",
    "scikit-learn",
    "numpy",
    "sentence_transformers",
    "xgboost",
]

[tool.setuptools.packages.find]
where = ["src"]